--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.12.0",
+    "@emotion/babel-preset-css-prop": "^11.12.0",
+    "@emotion/react": "^11.13.0",
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -22,6 +25,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0"
